<resources>
    <string name="app_name">Trivia App</string>
    <string name="enter_name">Please enter your name</string>
    <string name="next">Next</string>
    <string name="eg_john">eg. John</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="virat_kohli">Virat Kohli</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="AdamGil">Adam Gilchirst</string>
    <string name="JacquesKallis">Jacques Kallis</string>
    <string name="who_is_the_best_cricketer_in_the_world">Who is the best cricketer in the world?</string>
    <string name="options">Options:</string>
    <string name="what_are_the_colors_in_the_indian_national_flag_select_all">What are the colors in the Indian national flag? Select all:</string>
    <string name="summary">Summary</string>
    <string name="history">History</string>
    <string name="here_are_the_answers_selected">Here are the answers selected:</string>
    <string name="what_are_the_colors_in_the_national_flag">What are the colors in the national flag?</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="hello">Hello</string>
    <string name="answer">Answer:</string>
    <string name="finish">Finish</string>


</resources>