<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".view.SelectColorsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:background="@color/color_primary"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.TriviaApp.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text17"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:paddingHorizontal="@dimen/margin30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:text="@string/what_are_the_colors_in_the_indian_national_flag_select_all"
            android:textColor="@color/black"
            android:textSize="@dimen/text17"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:text="@string/options"
            android:textColor="@color/black"
            android:textSize="@dimen/text17"
            android:textStyle="bold"
            />



            <RadioButton
                android:id="@+id/rbOptionOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin30"
                android:paddingLeft="@dimen/padding_10"
                 android:button="@drawable/radio_btn_selector"
                android:text="@string/white"
                android:textSize="@dimen/text17" />

            <RadioButton
                android:id="@+id/rbOptionTwoColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:paddingLeft="@dimen/padding_10"

                android:button="@drawable/radio_btn_selector"
                android:text="@string/yellow"
                android:textSize="@dimen/text17" />

            <RadioButton
                android:id="@+id/rbOptionthreeColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:paddingLeft="@dimen/padding_10"

                android:button="@drawable/radio_btn_selector"
                android:text="@string/orange"
                android:textSize="@dimen/text17" />

            <RadioButton
                android:id="@+id/rbOptiontFourColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_10"

                android:layout_marginTop="@dimen/margin_20"
                android:button="@drawable/radio_btn_selector"
                android:text="@string/green"
                android:textSize="@dimen/text17" />



        <TextView
            android:id="@+id/tvNextColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin30"
            android:background="@drawable/btn_round"
            android:layout_marginTop="@dimen/margin40"
            android:elevation="@dimen/margin_2"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_14"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_15"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>