<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NameActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:background="@color/color_primary"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.TriviaApp.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text17"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:text="@string/enter_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text17"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin30"
        android:layout_marginTop="@dimen/padding_10"
        android:background="@drawable/ed_round_stroke"
        android:hint="@string/eg_john"
        android:inputType="textCapSentences"
        android:paddingHorizontal="@dimen/margin_20"
        android:paddingVertical="@dimen/padding_12"

        android:textColor="@color/black"
        android:textSize="@dimen/text_15"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />


    <TextView
        android:id="@+id/tvNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin30"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/btn_round"
        android:elevation="@dimen/margin_2"
        android:gravity="center"
        android:paddingVertical="@dimen/padding_14"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edName" />


</androidx.constraintlayout.widget.ConstraintLayout>